tests/spec/pass/channel_trysend_full.aja
ch = chan(1)
print(trySend(ch, 7))
print(trySend(ch, 8))
print(recv(ch))
