tests/spec/fail/timeout_negative.aja
ch = chan()
select:
    case timeout(-1):
        print("x")
